; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_sigint_handler.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_sigint_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"SIGINT handled.\0A\00", align 1
@SIGINT = common dso_local global i32 0, align 4
@pending_signals = common dso_local global i32 0, align 4
@sigint_immediate_handler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @sigint_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sigint_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @stderr, align 4
  %4 = call i32 @fprintf(i32 %3, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* @SIGINT, align 4
  %6 = shl i32 1, %5
  %7 = load i32, i32* @pending_signals, align 4
  %8 = or i32 %7, %6
  store i32 %8, i32* @pending_signals, align 4
  %9 = load i32, i32* @SIGINT, align 4
  %10 = load i32, i32* @sigint_immediate_handler, align 4
  %11 = call i32 @signal(i32 %9, i32 %10)
  ret void
}

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
